--- a/html_css/responsividade/styles/topicos.css
+++ b/html_css/responsividade/styles/topicos.css
@@ -27,3 +27,13 @@
     font-size: 14px;
     font-weight: 700;
 }
+
+@media screen and (min-width: 1024px){
+    .topico__titulo {
+        font-size: 24px;       
+    }
+
+    .topico__listas {
+        font-size: 24px;
+    }
+}
