angular_parte3 a parte4

--- a/angular/memoteca/src/app/components/pensamentos/pensamento/pensamento.component.html
+++ b/angular/memoteca/src/app/components/pensamentos/pensamento/pensamento.component.html
@@ -1,5 +1,11 @@
-<div class="pensamento {{ pensamento.modelo }} ff-roboto-mono pensamento-p">
+<div class="pensamento {{ pensamento.modelo }} ff-roboto-mono" [ngClass]="larguraPensamento()">
   <img src="../../../../assets/imagens/{{ pensamento.modelo }}.png" alt="aspas coloridas">
   <p class="conteudo">{{ pensamento.conteudo }}</p>
-  <p class="conteudo">{{ pensamento.autoria }}</p>
+  <p class="conteudo"><b>{{ pensamento.autoria }}</b></p>
+  <div class="acaoes">
+    <button class="botao-excluir">
+      <img src="../../../../assets/imagens/icone-editar.png" alt="icone de editar">
+      <img src="../../../../assets/imagens/icone-excluir.png" alt="icone de excluir">
+    </button>
+  </div>
 </div>
