--- a/angular/memoteca/frontend/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/angular/memoteca/frontend/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -1,5 +1,16 @@
 <section class="conatiner">
   <header class="header d-flex">
+    <div class="buscar-pensamentos">
+      <input 
+        type="search"
+        class="filtro"
+        placeholder="o que você procura?"
+        autofocus
+        [(ngModel)]="filtro"
+        (keyup)="pesquisarPensamentos()"
+      >
+      <img src="../../../../assets/imagens/lupa.png" alt="lupa">
+    </div>
     <h2 class="ff-inter">Meu Mural</h2>
     <button routerLink="/criarPensamento" class="botao">Adicionar pensamento</button>
   </header>
